# Kani-TTS-Vie

./: README.md  gradio_app.py  main.py  pyproject.toml  requirements.txt  server.py
client/: index.html
finetune/: kani-tts-vi-finetune.ipynb
kani_vie/: streaming_inference.py  tts_core.py
utils/: normalize_text.py
